--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
 .DS_Store
 node_modules/
 .vagrant
+.idea
+dev/couch/*.couch
+dev/couch.log
+dev/elasticsearch/data
+dev/elasticsearch/logs
+dev/redis.log
+erl_crash.dump
+npm-debug.log
+dev/user_upload_complete.dat
