--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "lab": "^3.1.1",
     "once": "^1.3.0",
     "touch": "0.0.3",
-    "npm2es": "^0.4.5",
     "replicate": "^0.2.0",
     "request": "^2.36.0"
-  }
+  },
+  "bundledDependencies": [
+    "npm2es"
+  ]
 }
